--- a/mohit/portfolio/portfolio-page.html
+++ b/mohit/portfolio/portfolio-page.html
@@ -108,30 +108,32 @@
       <div class="about-gig" id="description">
 
         <h3 class="desc-h2">About this gig</h3>
-        <p>Hi, I'm a professional UI/UX Designer with +4 years of experience in App Design, and more than 8 years in
-          Corporate Identity Design and Marketing, making the job easier when it comes to designing an interface that
-          sells a great user experience.
+        <p>Are you looking to promote your export business and reach out to potential customers? A professionally
+          designed flyer can help you make a great first impression and showcase your products or services in the best
+          possible way. As an experienced graphic designer, I can help you create a stunning flyer that will stand out
+          from the competition and grab your audience's attention.
         </p>
         <ul>
-          <b style="font-size: 1.8rem; font-family: sans-serif;">About this gig</b> <br>
-          <li>Great app design</li>
-          <li>Figma Source file</li>
-          <li>PNG Images</li>
-          <li>Design/Mockups for flow undestanding</li>
+          <b style="font-size: 1.8rem; font-family: sans-serif;">My flyer design services include:</b> <br>
+          <li>Custom design tailored to your business needs and branding</li>
+          <li>High-quality graphics and images to showcase your products</li>
+          <li>Eye-catching headlines and taglines to capture your audience's attention</li>
+          <li>Professional layout and typography to ensure easy readability</li>
+          <li>Unlimited revisions until you are completely satisfied with the design</li>
+          <li>Final file delivery in the format of your choice (PDF, JPG, PNG, etc.)</li>
         </ul>
 
         <ul>
           <b style="font-size: 1.8rem; font-family: sans-serif;">What I need from you?</b> <br>
-          <li>Description about your app idea</li>
+          <li>Description about your Flyer</li>
           <li>Your brand name (logo)</li>
-          <li>Wireframes/Rough sketches</li>
-          <li>Color scheme</li>
-          <li>Reference images or websites you like (inspiration)</li>
+          <li>brand guidelines</li>
+          
         </ul>
 
-        <p>Important: I do not code the Mobile App, I just work in the design of your ideal App and deliver a source
-          file
-          for your developers.<br>
+        <p>Whether you need a flyer to promote a specific product or service, or want a general flyer to showcase your
+          entire range, I can create a design that will effectively communicate your message and generate leads for your
+          business.<br>
           Feel free to contact me if you have any questions.</p>
 
       </div>
@@ -168,36 +170,49 @@
           </thead>
           <tbody>
             <tr>
+              <th scope="row">Print Ready</th>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+            </tr>
+            <tr>
               <th scope="row">Source file</th>
+              <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
+              <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
               <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">Double-Sided</th>
+              <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
               <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
               <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
             </tr>
             <tr>
-              <th scope="row">Number of pages or screens</th>
-              <td>2</td>
-              <td>5</td>
-              <td>8</td>
-            </tr>
-            <tr>
-              <th scope="row">Custom asset design</th>
-              <td>0</td>
+              <th scope="row">Custom Graphic</th>
               <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
-              <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
             </tr>
 
             <tr>
               <th scope="row">Revisions</th>
-              <td>2 day</td>
-              <td>3 day</td>
-              <td>4 day</td>
+              <td>Unlimited</td>
+              <td>Unlimited</td>
+              <td>Unlimited</td>
             </tr>
 
             <tr>
               <th scope="row">Delivery Time</th>
-              <td>Rs. 500</td>
-              <td>Rs. 800</td>
-              <td>Rs. 1200</td>
+              <td>1 day</td>
+              <td>2 days</td>
+              <td>3 days</td>
+            </tr>
+
+            <tr>
+              <th scope="row">Price</th>
+              <td> Rs. 400</td>
+              <td> Rs. 600</td>
+              <td> Rs. 800</td>
             </tr>
 
             <tr>
@@ -225,24 +240,24 @@
           <div class="card" style="width: 20rem;">
             <img src="../template/images/ui-design/1.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
-              <a href="#" class="btn btn-primary">Check-out</a>
+              <h5 class="card-title">I will design a creative UX UI for your website or mobile app</h5>
+              <a href="../portfolio/uiux-portfolio.html" class="btn btn-primary">Check-out</a>
             </div>
           </div>
 
           <div class="card" style="width: 20rem;">
             <img src="../template/images/thumbnails/1.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
-              <a href="#" class="btn btn-primary">check-out</a>
+              <h5 class="card-title">I will design an eye catching youtube thumbnail for your channel</h5>
+              <a href="../portfolio/thumbnail-portfolio.html" class="btn btn-primary">check-out</a>
             </div>
           </div>
 
           <div class="card" style="width: 20rem;">
             <img src="../template/images/webdesign/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
-              <a href="#" class="btn btn-primary">check-out</a>
+              <h5 class="card-title">I will do web design and build professional website or landing page</h5>
+              <a href="../portfolio/web-portfolio.html" class="btn btn-primary">check-out</a>
             </div>
           </div>
 
@@ -250,14 +265,14 @@
           <div class="card" style="width: 20rem;">
             <img src="../template/images/seo/3.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">I will optimize the SEO of your website for optimal rankings</h5>
+              <a href="../portfolio/seo-portfolio.html" class="btn btn-primary">Check-out</a>
             </div>
           </div>
 
 
 
-          
+
 
 
 
@@ -273,29 +288,27 @@
     <div class="right-half">
 
       <div class="right-box">
-        <div class="right-buttons buttons">
-          <button class="active" onclick="showBox('box1')">Basic</button>
-          <button onclick="showBox('box2')">Standard</button>
-          <button onclick="showBox('box3')">Premium</button>
+        <div class="right-buttons">
+          <button class="active-buttons" id="basic">Basic</button>
+          <button id="standrad">Standard</button>
+          <button id="premium">Premium</button>
         </div>
 
         <!-- box1 -->
-        <div class="right-box-desc box active" id="box1"> 
+        <div class="right-box-desc active-box" id="package-box1">
           <div class="price">
             <h2>Basic</h2>
-            <h2><i class="fa-solid fa-indian-rupee-sign" style="font-size: 2rem;"></i> 800</h2>
+            <h2><i class="fa-solid fa-indian-rupee-sign" style="font-size: 2rem;"></i> 400</h2>
 
           </div>
           <div class="package-desc">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat fuga deserunt mollitia, voluptates
-              labore iure.</p>
+            <p>BASIC Professional Print Ready One-Sided Sheet + PDF file + Hi-Res JPEG upto 300dp</p>
           </div>
           <ul>
-            <li>2 Days Delivery, 2 Revesion</li>
-            <li>Custom Graphic</li>
-            <li>Photo Editing</li>
-            <li>File Ready for Print</li>
-            <li>Source file</li>
+            <li>2 Days Delivery | Unlimited Revesion</li>
+            <li>Files Ready for Print</li>
+            <li>Social media design</li>
+            <li>Custom graphics</li>
           </ul>
 
           <button>Continue</button>
@@ -304,49 +317,49 @@
 
         <!-- box2 -->
 
-        <!-- <div class="right-box-desc box" id="box2">
+        <div class="right-box-desc" id="package-box2">
           <div class="price">
             <h2>Standrad</h2>
-            <h2><i class="fa-solid fa-indian-rupee-sign" style="font-size: 2rem;"></i> 800</h2>
+            <h2><i class="fa-solid fa-indian-rupee-sign" style="font-size: 2rem;"></i> 600</h2>
 
           </div>
           <div class="package-desc">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat fuga deserunt mollitia, voluptates
-              labore iure.</p>
+            <p>STANDARD Professional Print Ready Double-Sided Sheet + Pdf file+ Hi-Res JPEG upto 300dp</p>
           </div>
           <ul>
-            <li>2 Days Delivery, 2 Revesion</li>
-            <li>Custom Graphic</li>
-            <li>Photo Editing</li>
-            <li>File Ready for Print</li>
-            <li>Source file</li>
+            <li>2 Days Delivery | Unlimited Revesion</li>
+            <li>Files Ready for Print</li>
+            <li>Front & back design</li>
+            <li>Social media design</li>
+            <li>Custom graphics</li>
+            <li>Photo editing</li>
           </ul>
 
           <button>Continue</button>
-        </div> -->
+        </div>
         <!-- box2 end -->
 
         <!-- box3 -->
-        <!-- <div class="right-box-desc box" id="box3">
+        <div class="right-box-desc" id="package-box3">
           <div class="price">
             <h2>Premium</h2>
             <h2><i class="fa-solid fa-indian-rupee-sign" style="font-size: 2rem;"></i> 800</h2>
 
           </div>
           <div class="package-desc">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat fuga deserunt mollitia, voluptates
-              labore iure.</p>
+            <p>ALL IN ONE Professional Print Ready Double-Sided Sheet + Pdf file+ Hi-Res JPEG upto 300dp+ Commercial Use</p>
           </div>
           <ul>
-            <li>2 Days Delivery, 2 Revesion</li>
-            <li>Custom Graphic</li>
+            <li>2 Days Delivery | Unlimited Revesion</li>
+            <li>Files Ready for Print</li>
+            <li>Front & back design</li>
+            <li>Social media design</li>
+            <li>Custom graphics</li>
             <li>Photo Editing</li>
-            <li>File Ready for Print</li>
-            <li>Source file</li>
           </ul>
 
           <button>Continue</button>
-        </div> -->
+        </div>
         <!-- box3 end -->
 
 
@@ -403,11 +416,11 @@
     <div class="quick-links">
       <h3>Quick Links</h3>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">contact us</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../index.html">Services</a></li>
+        <li><a href="../index.html">Portfolio</a></li>
+        <li><a href="../resume/resume.html">Resume</a></li>
+        <li><a href="../about.html">contact us</a></li>
       </ul>
     </div>
 
@@ -427,7 +440,7 @@
     })
 
   </script>
-<!-- <script src="../template/js/portfolio.js"></script> -->
+  <script src="../template/js/portfolio.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
