--- a/mohit/portfolio/portfolio-page.html
+++ b/mohit/portfolio/portfolio-page.html
@@ -52,7 +52,8 @@
     </ul>
     <ul class="share">
       <li><a href="#"> <i class="fa-solid fa-heart" style="font-size: 2.6rem; color: gray;"></i> </a></li>
-      <li><a href="#"> <i class="fa-solid fa-square-share-nodes" style="font-size: 2.6rem; color: gray;"></i> </a></li>
+      <li><a href="#" id="share-btn"> <i class="fa-solid fa-square-share-nodes" style="font-size: 2.6rem; color: gray;"></i> </a></li>
+      <!-- <button >share</button> -->
     </ul>
   </div>
 
@@ -405,10 +406,10 @@
     <div class="follow-us">
       <h3>Services</h3>
       <ul>
-        <li><a href="#">Flyer designing</a></li>
+        <li><a href="../portfolio/portfolio-page.html">Flyer designing</a></li>
         <li><a href="#">Video editing</a></li>
-        <li><a href="#">UI/UX App designing</a></li>
-        <li><a href="#">Website designing</a></li>
+        <li><a href="../portfolio/uiux-portfolio.html">UI/UX App designing</a></li>
+        <li><a href="../portfolio/web-portfolio.html">Website designing</a></li>
       </ul>
     </div>
 
