--- a/mohit/portfolio/menu-portfolio.html
+++ b/mohit/portfolio/menu-portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mohit Sarkar</title>
+  <title>Portfolio-MENU</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="../template/css/style.css">
@@ -52,7 +52,9 @@
     </ul>
     <ul class="share">
       <li><a href="#"> <i class="fa-solid fa-heart" style="font-size: 2.6rem; color: gray;"></i> </a></li>
-      <li><a href="#"> <i class="fa-solid fa-square-share-nodes" style="font-size: 2.6rem; color: gray;"></i> </a></li>
+      <li><a href="#" id="share-btn"> <i class="fa-solid fa-square-share-nodes"
+            style="font-size: 2.6rem; color: gray;"></i> </a></li>
+      <!-- <button >share</button> -->
     </ul>
   </div>
 
@@ -60,11 +62,11 @@
 
   <div class="main-box" id="overview">
     <div class="left-half">
-      <h2>I will design professional flyers for your business</h2>
+      <h2>I will design restaurant food menu, static tv screen menu board, flyer, banner</h2>
       <div class="seller">
         <img src="../template/images/sellerimage/mohiticon.jpg" width="40px">
         <h3>Mohit Sarkar</h3>
-        <a href="#">mohitsarkar256@gmail.com</a>
+        <a href="mailto: mohitsarkar256@gmail.com">mohitsarkar256</a>
       </div>
 
 
@@ -108,30 +110,37 @@
       <div class="about-gig" id="description">
 
         <h3 class="desc-h2">About this gig</h3>
-        <p>Hi, I'm a professional UI/UX Designer with +4 years of experience in App Design, and more than 8 years in
-          Corporate Identity Design and Marketing, making the job easier when it comes to designing an interface that
-          sells a great user experience.
+        <p>Are you looking for Dynamic, Creative, Professional, Eye catching and Digital Menu Cards for your Restaurant,
+          Cafe, Hotel , Bar and also for various use? Well I can design this all within a short time of any sizes. My
+          design will be Smart, Elegant yet Promotional.Also I will offer UNLIMITED REVISIONS until you get satisfied.
+          Quality brings out the best design and I give my best for Perfect Quality.
         </p>
         <ul>
-          <b style="font-size: 1.8rem; font-family: sans-serif;">About this gig</b> <br>
-          <li>Great app design</li>
-          <li>Figma Source file</li>
-          <li>PNG Images</li>
-          <li>Design/Mockups for flow undestanding</li>
+          <b style="font-size: 1.8rem; font-family: sans-serif;">PROVIDING SERVICES</b> <br>
+          <li>Hotel /Restaurants menu</li>
+          <li>BI-Fold / TRI-Fold menu</li>
+          <li>Bar menu</li>
+          <li>Spa and Beauty</li>
+          <li>Wedding & Events</li>
+          <li>Food truck menu</li>
+          <li>Takeaway menu</li>
+          <li>Food flyer</li>
+          <li>Restaurant logo</li>
+
         </ul>
 
         <ul>
-          <b style="font-size: 1.8rem; font-family: sans-serif;">What I need from you?</b> <br>
-          <li>Description about your app idea</li>
-          <li>Your brand name (logo)</li>
-          <li>Wireframes/Rough sketches</li>
-          <li>Color scheme</li>
-          <li>Reference images or websites you like (inspiration)</li>
+          <b style="font-size: 1.8rem; font-family: sans-serif;">YOU NEED TO PROVIDE</b> <br>
+          <li>Detail Information</li>
+          <li>Price and Menu list</li>
+          <li>Contact Info</li>
+          <li>Referred Image (if any)</li>
+          <li>Logo ( if any)</li>
+
         </ul>
 
-        <p>Important: I do not code the Mobile App, I just work in the design of your ideal App and deliver a source
-          file
-          for your developers.<br>
+        <p>I understand the client's needs and assist through the whole process with professionalism. If you are looking
+          for top-notch designs and flexibility in the choice of design, You are at the right place.<br>
           Feel free to contact me if you have any questions.</p>
 
       </div>
@@ -168,36 +177,49 @@
           </thead>
           <tbody>
             <tr>
+              <th scope="row">Print Ready</th>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+            </tr>
+            <tr>
               <th scope="row">Source file</th>
+              <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
+              <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
               <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">Double-Sided</th>
+              <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
               <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
               <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
             </tr>
             <tr>
-              <th scope="row">Number of pages or screens</th>
-              <td>2</td>
-              <td>5</td>
-              <td>8</td>
-            </tr>
-            <tr>
-              <th scope="row">Custom asset design</th>
-              <td>0</td>
+              <th scope="row">Custom Graphic</th>
               <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
-              <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
             </tr>
 
             <tr>
               <th scope="row">Revisions</th>
-              <td>2 day</td>
-              <td>3 day</td>
-              <td>4 day</td>
+              <td>Unlimited</td>
+              <td>Unlimited</td>
+              <td>Unlimited</td>
             </tr>
 
             <tr>
               <th scope="row">Delivery Time</th>
-              <td>Rs. 500</td>
-              <td>Rs. 800</td>
-              <td>Rs. 1200</td>
+              <td>1 day</td>
+              <td>2 days</td>
+              <td>3 days</td>
+            </tr>
+
+            <tr>
+              <th scope="row">Price</th>
+              <td> Rs. 400</td>
+              <td> Rs. 600</td>
+              <td> Rs. 800</td>
             </tr>
 
             <tr>
@@ -225,24 +247,24 @@
           <div class="card" style="width: 20rem;">
             <img src="../template/images/ui-design/1.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
-              <a href="#" class="btn btn-primary">Check-out</a>
+              <h5 class="card-title">I will design a creative UX UI for your website or mobile app</h5>
+              <a href="../portfolio/uiux-portfolio.html" class="btn btn-primary">Check-out</a>
             </div>
           </div>
 
           <div class="card" style="width: 20rem;">
             <img src="../template/images/thumbnails/1.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
-              <a href="#" class="btn btn-primary">check-out</a>
+              <h5 class="card-title">I will design an eye catching youtube thumbnail for your channel</h5>
+              <a href="../portfolio/thumbnail-portfolio.html" class="btn btn-primary">check-out</a>
             </div>
           </div>
 
           <div class="card" style="width: 20rem;">
             <img src="../template/images/webdesign/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
-              <a href="#" class="btn btn-primary">check-out</a>
+              <h5 class="card-title">I will do web design and build professional website or landing page</h5>
+              <a href="../portfolio/web-portfolio.html" class="btn btn-primary">check-out</a>
             </div>
           </div>
 
@@ -250,14 +272,14 @@
           <div class="card" style="width: 20rem;">
             <img src="../template/images/seo/3.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">I will optimize the SEO of your website for optimal rankings</h5>
+              <a href="../portfolio/seo-portfolio.html" class="btn btn-primary">Check-out</a>
             </div>
           </div>
 
 
 
-          
+
 
 
 
@@ -273,29 +295,27 @@
     <div class="right-half">
 
       <div class="right-box">
-        <div class="right-buttons buttons">
-          <button class="active" onclick="showBox('box1')">Basic</button>
-          <button onclick="showBox('box2')">Standard</button>
-          <button onclick="showBox('box3')">Premium</button>
+        <div class="right-buttons">
+          <button class="active-buttons" id="basic">Basic</button>
+          <button id="standrad">Standard</button>
+          <button id="premium">Premium</button>
         </div>
 
         <!-- box1 -->
-        <div class="right-box-desc box active" id="box1"> 
+        <div class="right-box-desc active-box" id="package-box1">
           <div class="price">
             <h2>Basic</h2>
-            <h2><i class="fa-solid fa-indian-rupee-sign" style="font-size: 2rem;"></i> 800</h2>
+            <h2><i class="fa-solid fa-indian-rupee-sign" style="font-size: 2rem;"></i> 400</h2>
 
           </div>
           <div class="package-desc">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat fuga deserunt mollitia, voluptates
-              labore iure.</p>
+            <p>1 sided Flyer/ Menu/ Poster ► 300dpi Print Ready ► Unlimited Revision ► Free Mockup</p>
           </div>
           <ul>
-            <li>2 Days Delivery, 2 Revesion</li>
-            <li>Custom Graphic</li>
-            <li>Photo Editing</li>
-            <li>File Ready for Print</li>
-            <li>Source file</li>
+            <li>2 Days Delivery | Unlimited Revesion</li>
+            <li>Files Ready for Print</li>
+            <li>Social media design</li>
+            <li>Custom graphics</li>
           </ul>
 
           <button>Continue</button>
@@ -304,49 +324,50 @@
 
         <!-- box2 -->
 
-        <!-- <div class="right-box-desc box" id="box2">
+        <div class="right-box-desc" id="package-box2">
           <div class="price">
             <h2>Standrad</h2>
-            <h2><i class="fa-solid fa-indian-rupee-sign" style="font-size: 2rem;"></i> 800</h2>
+            <h2><i class="fa-solid fa-indian-rupee-sign" style="font-size: 2rem;"></i> 600</h2>
 
           </div>
           <div class="package-desc">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat fuga deserunt mollitia, voluptates
-              labore iure.</p>
+            <p>Double sided Flyer/ Menu/ Poster ► 300dpi Print Ready ► Unlimited Revision ► Free Mockup</p>
           </div>
           <ul>
-            <li>2 Days Delivery, 2 Revesion</li>
-            <li>Custom Graphic</li>
-            <li>Photo Editing</li>
-            <li>File Ready for Print</li>
-            <li>Source file</li>
+            <li>2 Days Delivery | Unlimited Revesion</li>
+            <li>Files Ready for Print</li>
+            <li>Front & back design</li>
+            <li>Social media design</li>
+            <li>Custom graphics</li>
+            <li>Photo editing</li>
           </ul>
 
           <button>Continue</button>
-        </div> -->
+        </div>
         <!-- box2 end -->
 
         <!-- box3 -->
-        <!-- <div class="right-box-desc box" id="box3">
+        <div class="right-box-desc" id="package-box3">
           <div class="price">
             <h2>Premium</h2>
             <h2><i class="fa-solid fa-indian-rupee-sign" style="font-size: 2rem;"></i> 800</h2>
 
           </div>
           <div class="package-desc">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat fuga deserunt mollitia, voluptates
-              labore iure.</p>
+            <p>Double sided Flyer/ Menu, Bi-Fold or Trifold Menu/ ► Source file ► Free Mockup ► Social Media Design
+            </p>
           </div>
           <ul>
-            <li>2 Days Delivery, 2 Revesion</li>
-            <li>Custom Graphic</li>
+            <li>2 Days Delivery | Unlimited Revesion</li>
+            <li>Files Ready for Print</li>
+            <li>Front & back design</li>
+            <li>Social media design</li>
+            <li>Custom graphics</li>
             <li>Photo Editing</li>
-            <li>File Ready for Print</li>
-            <li>Source file</li>
           </ul>
 
           <button>Continue</button>
-        </div> -->
+        </div>
         <!-- box3 end -->
 
 
@@ -392,10 +413,10 @@
     <div class="follow-us">
       <h3>Services</h3>
       <ul>
-        <li><a href="#">Flyer designing</a></li>
+        <li><a href="../portfolio/portfolio-page.html">Flyer designing</a></li>
         <li><a href="#">Video editing</a></li>
-        <li><a href="#">UI/UX App designing</a></li>
-        <li><a href="#">Website designing</a></li>
+        <li><a href="../portfolio/uiux-portfolio.html">UI/UX App designing</a></li>
+        <li><a href="../portfolio/web-portfolio.html">Website designing</a></li>
       </ul>
     </div>
 
@@ -403,11 +424,11 @@
     <div class="quick-links">
       <h3>Quick Links</h3>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">contact us</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../index.html">Services</a></li>
+        <li><a href="../index.html">Portfolio</a></li>
+        <li><a href="../resume/resume.html">Resume</a></li>
+        <li><a href="../about.html">contact us</a></li>
       </ul>
     </div>
 
@@ -427,7 +448,7 @@
     })
 
   </script>
-<!-- <script src="../template/js/portfolio.js"></script> -->
+  <script src="../template/js/portfolio.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
